--- a/src/test.html
+++ b/src/test.html
@@ -44,7 +44,7 @@
 
 <body>
 	<h1>
-		Kə́stəm Fənímyk Ωrþógrəfi
+		Ke_,_ste_m Fe_ni,_myk O_rt_o,_gre_fi
 		<br>
 		<sup>Custom Phonemic Orthography</sup>
 	</h1>
@@ -56,8 +56,8 @@
 			<dd>Bb</dd>
 			<dt>d</dt>
 			<dd>Dd</dd>
-			<dt>ð</dt>
-			<dd>Ðð</dd>
+			<dt>d_</dt>
+			<dd>D_d_</dd>
 			<dt>f</dt>
 			<dd>Ff</dd>
 			<dt>g</dt>
@@ -74,61 +74,61 @@
 			<dd>Mm</dd>
 			<dt>n</dt>
 			<dd>Nn</dd>
-			<dt>ŋ</dt>
-			<dd>Ŋŋ</dd>
+			<dt>n_</dt>
+			<dd>N_n_</dd>
 			<dt>p</dt>
 			<dd>Pp</dd>
 			<dt>r</dt>
 			<dd>Rr</dd>
 			<dt>s</dt>
 			<dd>Ss</dd>
-			<dt>ʃ</dt>
-			<dd>Ʃʃ</dd>
+			<dt>s__</dt>
+			<dd>S_s_</dd>
 			<dt>t</dt>
 			<dd>Tt</dd>
-			<dt>θ</dt>
-			<dd>Þþ</dd>
+			<dt>t__</dt>
+			<dd>T_t_</dd>
 			<dt>v</dt>
 			<dd>Vv</dd>
 			<dt>w</dt>
 			<dd>Ww</dd>
 			<dt>z</dt>
 			<dd>Zz</dd>
-			<dt>ʒ</dt>
-			<dd>Ʒʒ</dd>
+			<dt>z_</dt>
+			<dd>Z_z_</dd>
 		</dl>
 		<h3>Vowels</h3>
 		<dl>
-			<dt>ɑ</dt>
+			<dt>a__</dt>
 			<dd>Aa</dd>
-			<dt>æ</dt>
-			<dd>Ææ</dd>
-			<dt>ɛ</dt>
+			<dt>a_</dt>
+			<dd>A_a_</dd>
+			<dt>e__</dt>
 			<dd>Ee</dd>
 			<dt>e</dt>
-			<dd>E͓e͓<!--Placeholder until a proper non-diacritic alternative can be found--></dd>
-			<dt>ə</dt>
-			<dd>Əə</dd>
+			<dd>Ex_ex_<!--Placeholder until a proper non-diacritic alternative can be found--></dd>
+			<dt>e_</dt>
+			<dd>E_e_</dd>
 			<dt>i</dt>
 			<dd>Ii</dd>
-			<dt>ɔ</dt>
+			<dt>o___</dt>
 			<dd>Oo</dd>
 			<dt>o</dt>
-			<dd>Ωω</dd>
-			<dt>ʊ</dt>
-			<dd>Œœ</dd>
+			<dd>O_o_</dd>
+			<dt>o____</dt>
+			<dd>O__o__</dd>
 			<dt>u</dt>
 			<dd>Uu</dd>
-			<dt>ɪ</dt>
+			<dt>i__</dt>
 			<dd>Yy</dd>
 		</dl>
 	</div>
 	<h2>Diacritics</h2>
 	<dl>
 		<dt>Emphasis</dt>
-		<dd>◌́</dd>
+		<dd>0_,_</dd>
 		<dt>Diaresis</dt>
-		<dd>◌̈</dd>
+		<dd>0_,__</dd>
 	</dl>
 </body>
 
